PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
20 Aug 2015, PHP 7.0.0 RC 1

- Core:
  . Fixed bug #70262 (Accessing array crashes PHP 7.0beta3).
    (Laruence, Dmitry)
  . Fixed bug #70258 (Segfault if do_resize fails to allocated memory).
    (Laruence)
  . Fixed bug #70253 (segfault at _efree () in zend_alloc.c:1389). (Laruence)
  . Fixed bug #70240 (Segfault when doing unset($var());). (Laruence)
  . Fixed bug #70223 (Incrementing value returned by magic getter). (Laruence)
  . Fixed bug #70215 (Segfault when __invoke is static). (Bob)
  . Fixed bug #70207 (Finally is broken with opcache). (Laruence, Dmitry)
  . Fixed bug #70173 (ZVAL_COPY_VALUE_EX broken for 32bit Solaris Sparc).
    (Laruence, cmb)
  . Fixed bug #69487 (SAPI may truncate POST data). (cmb)
  . Fixed bug #70198 (Checking liveness does not work as expected).
    (Shafreeck Sea, Anatol Belski)
  . Fixed bug #70241/#70293 (Skipped assertions affect Generator returns). (Bob)
  . Fixed bug #70239 (Creating a huge array doesn't result in exhausted,
    but segfault). (Laruence, Anatol)
  . Fixed bug causing exception traces with anon classes to be truncated. (Bob)

- CLI server:
  . Fixed bug #66606 (Sets HTTP_CONTENT_TYPE but not CONTENT_TYPE).
    (wusuopu, cmb)
  . Fixed bug #70264 (CLI server directory traversal). (cmb)

- Date:
  . Fixed bug #70245 (strtotime does not emit warning when 2nd parameter is
    object or string). (cmb)
  . Fixed bug #70266 (DateInterval::__construct.interval_spec is not supposed to
    be optional). (cmb)
  . Fixed bug #70277 (new DateTimeZone($foo) is ignoring text after null byte).
    (cmb)

- MCrypt:
  . Fixed bug #69833 (mcrypt fd caching not working). (Anatol)

- Opcache:
  . Fixed bug #70237 (Empty while and do-while segmentation fault with opcode
    on CLI enabled). (Dmitry, Laruence)

- PCRE: